[gd_scene load_steps=14 format=3 uid="uid://7gv6q50fuutj"]

[ext_resource type="Script" path="res://Assets/Scenes/Player/player.gd" id="1_1w47b"]
[ext_resource type="Script" path="res://Assets/Scenes/Player/framerate_counter.gd" id="2_m6aot"]
[ext_resource type="Script" path="res://Assets/Scenes/Player/configuration.gd" id="5_a41y1"]
[ext_resource type="Script" path="res://Assets/Scenes/Player/menu_player.gd" id="6_qkj5w"]
[ext_resource type="Script" path="res://Assets/Scenes/Player/graphics_menu.gd" id="6_ssrgo"]
[ext_resource type="Script" path="res://Assets/Scenes/Player/Chat.gd" id="8_c1qgp"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_emkox"]
radius = 0.493347

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6b3ky"]

[sub_resource type="BoxMesh" id="BoxMesh_n4lxw"]

[sub_resource type="Animation" id="Animation_0hvbr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Messages:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_t6n4t"]
resource_name = "fade"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Messages:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 9, 10),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_qrta0"]
resource_name = "opaque"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Messages:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ypu8n"]
_data = {
"RESET": SubResource("Animation_0hvbr"),
"fade": SubResource("Animation_t6n4t"),
"opaque": SubResource("Animation_qrta0")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_1w47b")

[node name="CollisionShape3d" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_emkox")

[node name="MeshInstance3d" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_6b3ky")

[node name="Head" type="Node3D" parent="."]

[node name="Camera3d" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.603, 0)
current = true
near = 0.035
far = 48.01

[node name="RayCast3d" type="RayCast3D" parent="Head/Camera3d"]
transform = Transform3D(2.98023e-08, 0, 1, 0, 1, 0, -1, 0, 2.98023e-08, 0, -0.00588065, 0.463024)
target_position = Vector3(60, 0, 0)

[node name="Node2D" type="Node2D" parent="Head/Camera3d"]

[node name="Label" type="Label" parent="Head/Camera3d/Node2D"]
offset_left = 1.0
offset_right = 115.0
offset_bottom = 23.0
text = "FPS:"
script = ExtResource("2_m6aot")

[node name="Menu" type="Node2D" parent="Head/Camera3d"]
script = ExtResource("6_qkj5w")

[node name="Menu" type="Node2D" parent="Head/Camera3d/Menu"]

[node name="MeshInstance2D" type="MeshInstance2D" parent="Head/Camera3d/Menu/Menu"]
modulate = Color(0.120758, 0.166205, 0.220152, 0.603922)
position = Vector2(960, 540)
scale = Vector2(1920, 1080)
mesh = SubResource("BoxMesh_n4lxw")

[node name="Disconnect" type="Button" parent="Head/Camera3d/Menu/Menu"]
offset_left = 747.0
offset_top = 931.0
offset_right = 1076.0
offset_bottom = 1030.0
text = "Disconnect "

[node name="Disconnect2" type="Button" parent="Head/Camera3d/Menu/Menu"]
offset_left = 1597.0
offset_top = 931.0
offset_right = 1867.0
offset_bottom = 1030.0
text = "Report a bug"

[node name="Settings" type="Button" parent="Head/Camera3d/Menu/Menu"]
offset_left = 747.0
offset_top = 814.0
offset_right = 1076.0
offset_bottom = 913.0
text = "Settings"

[node name="Continue" type="Button" parent="Head/Camera3d/Menu/Menu"]
offset_left = 747.0
offset_top = 700.0
offset_right = 1076.0
offset_bottom = 799.0
text = "Continue"

[node name="Settings" type="Node2D" parent="Head/Camera3d/Menu"]

[node name="Settings" type="TabContainer" parent="Head/Camera3d/Menu/Settings"]
offset_left = 287.0
offset_top = 75.0
offset_right = 1535.0
offset_bottom = 680.0
current_tab = 1

[node name="Gameplay" type="Control" parent="Head/Camera3d/Menu/Settings/Settings"]
visible = false
layout_mode = 2
script = ExtResource("5_a41y1")
metadata/_tab_index = 0

[node name="player_opacity" type="HSlider" parent="Head/Camera3d/Menu/Settings/Settings/Gameplay"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.026
anchor_top = 0.178
anchor_right = 0.135
anchor_bottom = 0.233
offset_left = -15.448
offset_top = -80.172
offset_right = -15.48
offset_bottom = -79.742
grow_horizontal = 2
max_value = 1.0
step = 0.1
value = 1.0
tick_count = 3

[node name="Label" type="Label" parent="Head/Camera3d/Menu/Settings/Settings/Gameplay/player_opacity"]
layout_mode = 0
offset_top = -16.0
offset_right = 135.0
offset_bottom = 7.0
text = "Player Opacity"
horizontal_alignment = 1

[node name="Graphics" type="Control" parent="Head/Camera3d/Menu/Settings/Settings"]
layout_mode = 2
script = ExtResource("6_ssrgo")
metadata/_tab_index = 1

[node name="Occlusion" type="OptionButton" parent="Head/Camera3d/Menu/Settings/Settings/Graphics"]
layout_mode = 0
offset_left = 26.0
offset_top = 43.0
offset_right = 107.0
offset_bottom = 63.0

[node name="Label" type="Label" parent="Head/Camera3d/Menu/Settings/Settings/Graphics/Occlusion"]
layout_mode = 0
offset_left = 1.0
offset_top = -25.0
offset_right = 78.0
offset_bottom = -2.0
text = "Occlusion"

[node name="Resolution" type="OptionButton" parent="Head/Camera3d/Menu/Settings/Settings/Graphics"]
layout_mode = 0
offset_left = 26.0
offset_top = 219.0
offset_right = 107.0
offset_bottom = 239.0

[node name="Label" type="Label" parent="Head/Camera3d/Menu/Settings/Settings/Graphics/Resolution"]
layout_mode = 0
offset_left = 1.0
offset_top = -25.0
offset_right = 78.0
offset_bottom = -2.0
text = "Resolution"

[node name="Vsync" type="OptionButton" parent="Head/Camera3d/Menu/Settings/Settings/Graphics"]
layout_mode = 0
offset_left = 151.0
offset_top = 43.0
offset_right = 232.0
offset_bottom = 63.0

[node name="Label" type="Label" parent="Head/Camera3d/Menu/Settings/Settings/Graphics/Vsync"]
layout_mode = 0
offset_left = 1.0
offset_top = -25.0
offset_right = 78.0
offset_bottom = -2.0
text = "VSync"

[node name="Antialiasing" type="OptionButton" parent="Head/Camera3d/Menu/Settings/Settings/Graphics"]
layout_mode = 0
offset_left = 26.0
offset_top = 167.0
offset_right = 107.0
offset_bottom = 187.0

[node name="Label" type="Label" parent="Head/Camera3d/Menu/Settings/Settings/Graphics/Antialiasing"]
layout_mode = 0
offset_left = 1.0
offset_top = -25.0
offset_right = 78.0
offset_bottom = -2.0
text = "Antialiasing"

[node name="Controls" type="Control" parent="Head/Camera3d/Menu/Settings/Settings"]
visible = false
layout_mode = 2
script = ExtResource("5_a41y1")
metadata/_tab_index = 2

[node name="zoom_toggle" type="CheckButton" parent="Head/Camera3d/Menu/Settings/Settings/Controls"]
layout_mode = 0
offset_left = 25.0
offset_top = 38.0
offset_right = 172.0
offset_bottom = 69.0
text = "Toggle Zoom"

[node name="pan_mode" type="CheckButton" parent="Head/Camera3d/Menu/Settings/Settings/Controls"]
layout_mode = 0
offset_left = 25.0
offset_top = 70.0
offset_right = 172.0
offset_bottom = 101.0
text = "Pan Mode"

[node name="mouse_sensitivity" type="HSlider" parent="Head/Camera3d/Menu/Settings/Settings/Controls"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.026
anchor_top = 0.178
anchor_right = 0.135
anchor_bottom = 0.233
offset_left = 0.551998
offset_top = 15.828
offset_right = 0.519989
offset_bottom = 16.258
grow_horizontal = 2
max_value = 2.0
step = 0.1
value = 1.0
tick_count = 3

[node name="Label" type="Label" parent="Head/Camera3d/Menu/Settings/Settings/Controls/mouse_sensitivity"]
layout_mode = 0
offset_top = -16.0
offset_right = 135.0
offset_bottom = 7.0
text = "Camera Sensitivity"

[node name="Exit" type="Button" parent="Head/Camera3d/Menu/Settings"]
offset_left = 794.0
offset_top = 74.0
offset_right = 829.0
offset_bottom = 105.0
text = "X"

[node name="Chat" type="VBoxContainer" parent="Head/Camera3d"]
anchors_preset = -1
anchor_top = 0.75
anchor_right = 0.25
anchor_bottom = 1.0
grow_vertical = 0
alignment = 2
script = ExtResource("8_c1qgp")

[node name="Messages" type="ScrollContainer" parent="Head/Camera3d/Chat"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Head/Camera3d/Chat/Messages"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="Edit" type="LineEdit" parent="Head/Camera3d/Chat"]
layout_mode = 2
size_flags_vertical = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="Head/Camera3d/Chat"]
libraries = {
"": SubResource("AnimationLibrary_ypu8n")
}

[connection signal="pressed" from="Head/Camera3d/Menu/Menu/Disconnect" to="Head/Camera3d/Menu" method="_disconnect_button_pressed"]
[connection signal="pressed" from="Head/Camera3d/Menu/Menu/Disconnect2" to="Head/Camera3d/Menu" method="bug_report_pressed"]
[connection signal="pressed" from="Head/Camera3d/Menu/Menu/Settings" to="Head/Camera3d/Menu" method="_settings_button_pressed"]
[connection signal="pressed" from="Head/Camera3d/Menu/Menu/Continue" to="Head/Camera3d/Menu" method="_continue_button_pressed"]
[connection signal="value_changed" from="Head/Camera3d/Menu/Settings/Settings/Gameplay/player_opacity" to="Head/Camera3d/Menu/Settings/Settings/Gameplay" method="option" binds= ["player_opacity"]]
[connection signal="item_selected" from="Head/Camera3d/Menu/Settings/Settings/Graphics/Occlusion" to="Head/Camera3d/Menu/Settings/Settings/Graphics" method="_new_occlusion_selected"]
[connection signal="item_selected" from="Head/Camera3d/Menu/Settings/Settings/Graphics/Resolution" to="Head/Camera3d/Menu/Settings/Settings/Graphics" method="new_resolution_selected"]
[connection signal="item_selected" from="Head/Camera3d/Menu/Settings/Settings/Graphics/Vsync" to="Head/Camera3d/Menu/Settings/Settings/Graphics" method="_new_vsync_selected"]
[connection signal="item_selected" from="Head/Camera3d/Menu/Settings/Settings/Graphics/Antialiasing" to="Head/Camera3d/Menu/Settings/Settings/Graphics" method="_new_antialiasing_selected"]
[connection signal="toggled" from="Head/Camera3d/Menu/Settings/Settings/Controls/zoom_toggle" to="Head/Camera3d/Menu/Settings/Settings/Controls" method="option" binds= ["zoom_toggle"]]
[connection signal="toggled" from="Head/Camera3d/Menu/Settings/Settings/Controls/pan_mode" to="Head/Camera3d/Menu/Settings/Settings/Controls" method="option" binds= ["pan_mode"]]
[connection signal="value_changed" from="Head/Camera3d/Menu/Settings/Settings/Controls/mouse_sensitivity" to="Head/Camera3d/Menu/Settings/Settings/Controls" method="option" binds= ["mouse_sensitivity"]]
[connection signal="pressed" from="Head/Camera3d/Menu/Settings/Exit" to="Head/Camera3d/Menu" method="_settings_exit_pressed"]
[connection signal="mouse_entered" from="Head/Camera3d/Chat" to="Head/Camera3d/Chat" method="_on_mouse_enter_or_leave" binds= [true]]
[connection signal="mouse_exited" from="Head/Camera3d/Chat" to="Head/Camera3d/Chat" method="_on_mouse_enter_or_leave" binds= [false]]
[connection signal="text_submitted" from="Head/Camera3d/Chat/Edit" to="Head/Camera3d/Chat" method="_on_text_edit_text_submitted"]
